Add User Model with Devise

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
 			<small>
-				<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-				by <%= link_to "Mattan Griffel", "http://mattangriffel.com" %>
+				<%= link_to "fmv", "http://fmvlist.com" %>
+				by Ben and Court
 			</small>
 
 		</div>
