--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,9 @@
 <h1>About</h1>
-<p>
+<p class="lead">
+	This is a test of the lead paragraph feature in bootstrap.
 	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
 	blah blah blah
 	<%= link_to "Ruby on Rails", "http://rubyonrails.org" %>
 	blah blah blah
+
 </p>
