--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,14 @@
-<div class="hero-unit">	
-	<h1>Welcome to the Test Page!</h1>
-		<p>You've found the home page for the 
-			 <%= link_to "TEST TEST", "http://onemonthrails.com" %>
-			 page.
-		</p>
-		<p>
-			<%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %>
-		</p>
-</div>
-	
+<% if user_signed_in? %>
+	<h1>Welcome</h1>
+<% else %>
+	<div class="hero-unit">	
+		<h1>Welcome to fmv!</h1>
+
+			<p>You've found the marketplace dedicated to freelance video 
+			</p>
+			<p>
+				<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
+			</p>
+	</div>
+<% end %>
 
